# soundatlas

./: .dockerignore  .env.codex  .env.codex.example  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  TODO.md  docker-compose.yml
.devcontainer/: Dockerfile  backend-scripts-completion.bash  bashrc  devcontainer.json  docker-compose.devcontainer.yml  post-create.sh
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  link_ignores.py  main.py  schemas.py  seed_repository.py
backend/app/media_enrichment/: __init__.py  event_search_components.py  image_query_planner.py  models.py  pipeline.py  quality_report.py  ranking.py  retrieval_brief.py  services.py  settings.py
backend/scripts/: completion.py  enrich_image_links.py  enrich_media_links.py  generate_event_search_components.py  report_enrichment_quality.py  report_seed_link_counts.py  route_content_pipeline.py  run_youtube_search_requests.py
backend/tests/: test_api.py  test_enrich_image_links_script.py  test_enrich_media_links_script.py  test_enrichment_quality_report.py  test_event_search_components.py  test_image_query_planner.py  test_media_enrichment.py  test_report_seed_link_counts.py  test_retrieval_brief.py  test_route_content_pipeline.py  test_run_youtube_search_requests.py  test_schemas.py  test_seed_repository.py
docker/: egress-guard.sh
docs/: agent-instruction-priority.md  dev-container.md  done.md  enrichment-workflow.md  image-enrichment-concept.md  image-enrichment-konzept.md  implementation-plan-workflow.md  media-enrichment-konzept.md  mvp-concept.md  (+7 more)
(+158 files in other folders)
