[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the SoundAtlas MVP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx2>=0.28.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
